fixat blurry bakgrundsbild

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -8284,6 +8284,33 @@ button.close {
 .fa-medium:before {
   content: "\f23a";
 }
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+.bakgrundsbild {
+  background: url(../../img/frontend/blurrybakgrund.png);
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+  color: #337bb7;
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .bakgrundsbild {
+    height: 550px;
+  }
+}
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .bakgrundsbild {
+    height: 600px;
+  }
+}
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .bakgrundsbild {
+    height: 660px;
+  }
+}
 .white {
   color: #ffffff;
 }
