--- a/resources/assets/less/frontend/media-fixer.less
+++ b/resources/assets/less/frontend/media-fixer.less
@@ -1,34 +1,30 @@
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
-.konferensbild {
-  background: url(../../../../img/konferensbild2.png) ;
+.bakgrundsbild {
+  background: url(../../img/frontend/blurrybakgrund.png) ;
   background-position: center;
   background-size: cover;
   height:  300px;
+  .primary;
   }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) {
-  .konferensbild {
+  .bakgrundsbild {
       height:  550px;
      }
 }
 
-@media (min-width: @screen-sm-min) and ( max-width: @screen-sm-max){
-  .konferensbild {
-      height:  550px;
-     }
-}
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) {
-  .konferensbild {
+  .bakgrundsbild {
       height:  600px;
      }
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) {
-  .konferensbild {
+  .bakgrundsbild {
       height:  660px;
      }
 
