--- a/resources/assets/less/frontend/variable-overrides.less
+++ b/resources/assets/less/frontend/variable-overrides.less
@@ -1,4 +1,5 @@
 @fa-font-path:        "../../fonts";
+@img-path:            "../../img";
 //
 // Variables
 // --------------------------------------------------
